--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 	<header id="contenedor">
 		<span id="titulo">Estilo de título básico</span>
 	</header>
+	
+	<hr>
+	
+	<header id="con_radius">
+		<span id="tit_radius">Este título utiliza border-radius: 20px</span>
+	</header>
 </body>
 
 </html>
