--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 	<header id="con_radius">
 		<span id="tit_radius">Este título utiliza border-radius: 20px</span>
 	</header>
+	
+	
+	<hr>
+	
+	<header id="con_radius2">
+		<span id="tit_radius2">Este título utiliza border-radius: 20px 10px 30px 50px</span>
+	</header>
+	
+	<hr>
 </body>
 
 </html>
