--- a/index.html
+++ b/index.html
@@ -16,18 +16,54 @@
 	
 	<hr>
 	
-	<header id="con_radius">
-		<span id="tit_radius">Este título utiliza border-radius: 20px</span>
-	</header>
-	
-	
-	<hr>
-	
-	<header id="con_radius2">
-		<span id="tit_radius2">Este título utiliza border-radius: 20px 10px 30px 50px</span>
+	<header id="contenedor_radius">
+		<span id="titulo_radius">Este título utiliza border-radius: 20px</span>
 	</header>
 	
 	<hr>
+	
+	<header id="contenedor_radius2">
+		<span id="titulo_radius2">Este título utiliza border-radius: 20px 10px 30px 50px</span>
+	</header>
+	
+	<hr>
+	
+	<header id="contenedor_radius3">
+		<span id="titulo_radius3">Curvas elipticas border-radius: 20px / 10px</span>
+	</header>
+	
+	<hr>
+	
+	<header id="contenedor_shadow">
+		<span id="titulo_shadow">Agregar sombra con box-shadow: rgb(150, 150, 150) 5px 5px</span>
+	</header>
+	
+	<hr>
+	
+	<header id="contenedor_shadow2">
+		<span id="titulo_shadow2">Sombra real con box-shadow: rgb(150, 150, 150) 5px 5px 10px</span>
+	</header>
+	
+	<hr>
+	
+	<header id="contenedor_shadow2a">
+		<span id="titulo_shadow2a">Sombra real con box-shadow: rgb(220, 255, 220) 5px 5px 140px</span>
+	</header>
+	
+	<hr>
+	
+	<header id="contenedor_shadow3">
+		<span id="titulo_shadow3">Sombra real con box-shadow: rgb(150, 150, 150) 5px 5px 10px inset</span>
+	</header>
+	
+	<hr>
+	
+	<header id="contenedor_text">
+		<span id="titulo_text">Sombra a las letras con text-shadow: rgb(150, 150, 150) 3px 3px 5px</span>
+	</header>
+	
+	<hr>
+	
 </body>
 
 </html>
